--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "babel-preset-react-app": "^10.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-recaptcha": "^2.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
