--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-preset-react-app": "^10.0.0",
     "d3-delaunay": "^6.0.2",
     "debounce": "^1.2.1",
+    "object-assign": "^4.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-google-charts": "^3.0.15",
