--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "next": "^12.1.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-google-recaptcha": "^2.1.0"
+    "react-google-recaptcha": "^2.1.0",
+    "string-similarity": "^4.0.4"
   },
   "scripts": {
     "dev": "next dev",
